--- a/salt/jupyter/files/requirements-jupyter.txt
+++ b/salt/jupyter/files/requirements-jupyter.txt
@@ -27,6 +27,7 @@ pyzmq==16.0.2
 qtconsole==4.2.1
 simplegeneric==0.8.1
 six==1.10.0
+sparkmagic==0.12.4
 terminado==0.6
 testpath==0.3
 tornado==4.4.2
