--- a/salt/jupyter/files/requirements-jupyter.txt
+++ b/salt/jupyter/files/requirements-jupyter.txt
@@ -3,9 +3,11 @@ bleach==1.5.0
 decorator==4.0.10
 entrypoints==0.2.2
 html5lib==0.9999999
+impyla==0.14.0
 ipykernel==4.5.2
 ipython==5.1.0
 ipython-genutils==0.1.0
+ipython-sql==0.3.8
 Jinja2==2.8
 jsonschema==2.5.1
 jupyter==1.0.0
@@ -23,13 +25,17 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.9
 ptyprocess==0.5.1
 Pygments==2.1.3
+pymysql==0.7.11
+psycopg2==2.7.3.2
 pyzmq==16.0.2
 qtconsole==4.2.1
 simplegeneric==0.8.1
 six==1.10.0
 sparkmagic==0.12.4
+sql-magic==0.0.3
 terminado==0.6
 testpath==0.3
+thrift==0.9.3
 tornado==4.4.2
 traitlets==4.3.1
 wcwidth==0.1.7
